<resources>
    <string name="pay_result_callback_msg" formatted="false">微信支付：%s</string>
    <string name="alipay_result_callback_msg" formatted="false">支付宝支付：%s</string>
    <string name="message_untrusted_certificate">该网站的证书不被信任。是否仍要继续？</string>
    <string name="action_yes">确认</string>
    <string name="action_no">取消</string>
    <string name="title_warning">警告</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="retry">重试</string>
    <string name="delete">删除</string>
    <string name="home">首页</string>
    <string name="back">返回</string>
    <string name="down">下移</string>
    <string name="up">上移</string>
    <string name="go">向前</string>
    <string name="refresh">刷新</string>
    <string name="more_set">设置</string>
    <string name="more_share">分享</string>
    <string name="app_tip">提示</string>
    <string name="setwidthleft">左窗口</string>
    <string name="setleft">左窗口设置</string>
    <string name="setmain">主窗口设置</string>
    <string name="setright">右窗口设置</string>
    <string name="setdetail">弹出窗口设置</string>
    <string name="setbottomtool">工具栏设置</string>
    <string name="setbottommsg">底部窗口设置</string>
    <string name="app_on">程序启动时启用</string>
    <string name="app_off">程序启动时禁用</string>
    <string name="on">当前启用状态</string>
    <string name="off">当前禁用状态</string>
    <string name="push_message">推送参数</string>
    <string name="setwidthright">右窗口</string>
    <string name="alert_tbsweb">需要先安装TBSWeb 点击确定安装</string>
    <string name="offlineManage">离线下载管理</string>
    <string name="offlineSetting">离线下载设置</string>
    <string name="offlineTimeSetting">定时检测设置</string>
    <string name="offlineContentSetting">下载内容设置</string>
    <string name="offlineDownloadType">自动离线下载</string>
    <string name="offlineDownloadTime">开启定时检测</string>
    <string name="check_Vibrate">有更新震动提示</string>
    <string name="check_Sound">有更新响铃提示</string>
    <string name="checkTime">定时检测间隔：</string>
    <string name="offlineDownloadTypeTxt">离线下载内容</string>
    <string name="offlineDownloadImg">图文</string>
    <string name="offlineCountLabel">离线循环条数</string>
    <string name="offlineOnlyDownloadTxt">文本</string>
    <string name="SkyDriverSetting">网盘服务</string>
    <string name="CloudSetting">应用商城</string>
    <string name="WEBSetting">WEB服务(HTTP)</string>
    <string name="TBSSetting">TBS全文数据库服务</string>
    <string name="FTSSetting">FTS文件传输服务</string>
    <string name="EBSSetting">EBS统一认证服务</string>
    <string name="onKeyStartedOffline">立即检测数据更新</string>
    <string name="onKeyStarted">启动</string>
    <string name="onKeyStop">停止</string>
    <string name="onKeyDown">禁用</string>
    <string name="onKeyRestart">重启</string>
    <string name="onKeyCheck">检测</string>
    <string name="onKeyUseAll">一键应用到所有</string>
    <string name="selectAllChannel">全部信息</string>
    <string name="onlyWIFIDo">非WIFI提示用户确认</string>
    <string name="msgPush">库更新时暂停访问</string>
    <string name="changeIndex">更新后优化索引</string>
    <string name="Message">状态行显示更新信息</string>
    <string name="update">版本更新</string>
    <string name="app_about">关于应用</string>
    <string name="app_manager">应用设置</string>
    <string name="system_set">系统设置</string>
    <string name="system_msg">应用信息</string>
    <string name="device_manager">设备管理</string>
    <string name="search_setup">检索设置</string>
    <string name="subscribe_manager">订阅管理</string>
    <string name="backup_share">应用备份</string>
    <string name="defaultapp">设置为当前应用</string>
    <string name="setdeskshort">添加到桌面</string>
    <string name="setcopy">复制应用</string>
    <string name="setchange">修改应用</string>
    <string name="deleteapp">删除应用</string>
    <string name="filemanager">文件管理</string>
    <string name="update_set">版本更新设置</string>
    <string name="update_log">版本更新日志</string>
    <string name="advanced_setup">终端设置</string>
    <string name="weixin_setup">微信管理</string>
    <string name="weixin_set_menu">自定义菜单</string>
    <string name="weixin_manager">微信设置</string>
    <string name="module_push">信息推送</string>
    <string name="module_offlinedownload">离线下载</string>
    <string name="app_setup">显示设置</string>
    <string name="skydrive_manager">网盘管理</string>
    <string name="chat_setup">即时消息</string>
    <string name="more">更多</string>
    <string name="feedback">意见反馈</string>
    <string name="onlinehelp">操作指南</string>
    <string name="send_label">发送</string>
    <string name="about">关于</string>
    <string name="copyright_title">北京金信桥信息技术有限公司</string>
    <string name="copyright_web">www.tbs.com.cn</string>
    <string name="app_copyright">"Copyright © 2014 TBS. All Rights Reserved."</string>
    <string name="version_content">版本号：2013.08.0001</string>
    <string name="quit">退出</string>
    <string name="quitall">完全退出</string>
    <string name="text_size">字体大小</string>
    <string name="night_mode">背景皮肤</string>
    <string name="favourite">信息概览</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="new_data_toast_message">已同步%d 条用户信息</string>
    <string name="load_full">已加载全部</string>
    <string name="text_page_font">正文字号</string>
    <string name="copy">复制</string>
    <string name="manager">管理</string>
    <string name="all">导航</string>
    <string name="favourite1">浏览</string>
    <string name="detailtool">工具栏</string>
    <string name="detailcomment">笔记/评论</string>
    <string name="title">标题栏</string>
    <string name="favourite2">添加收藏</string>
    <string name="favourite4">删除收藏</string>
    <string name="favourite3">收藏</string>
    <string name="search">检索</string>
    <string name="alerm_title">提醒</string>
    <string name="alert_quit_confirm">是否退出本程序？</string>
    <string name="alert_quit_all">是否完全退出应用程序？</string>
    <string name="alert_yes_button">确认</string>
    <string name="alert_no_button">取消</string>
    <string name="toast_uploaderro_cancel">无法获取文件地址,上传已取消</string>
    <string name="toast_upload_cancel">上传已取消</string>
    <string name="guider_open_button">进入软件</string>
    <string name="loading">加载中...</string>
    <string name="contact_search_hint">请输入搜索关键字</string>
    <string name="timer_restart_web">定时重启</string>
    <string name="dirbrowser_web">开启目录共享</string>
    <string name="remotevisit_web">开启共享访问</string>
    <string name="no_server">内置服务</string>
    <string name="local_server">本机服务（我的手机或平板）</string>
    <string name="user_service">管理</string>
    <string name="nettask_service">任务调度服务</string>
    <string name="http_service">备用服务（我的平板或手机）</string>
    <string name="other_server">外部服务</string>
    <string name="adress">地址：</string>
    <string name="status">Web服务：</string>
    <string name="task">任务调度：</string>
    <string name="http_svr">HTTP服务：</string>
    <string name="on_status">已启动</string>
    <string name="off_status">已停止</string>
    <string name="hint_adress">168.160.111.215</string>
    <string name="port">端口：</string>
    <string name="server_port">端口：</string>
    <string name="port1">端口：</string>
    <string name="path">路径：</string>
    <string name="hint_port">1011</string>
    <string name="local_adress">127.0.0.1</string>
    <string name="local_port">6130</string>
    <string name="sync_title">评论/笔记</string>
    <string name="app_yqxx">水利热点</string>
    <string name="app_dbn">农业动态</string>
    <string name="app_bkqs">百科全书</string>
    <string name="app_tpk">图片库</string>
    <string name="app_qkwx">期刊文献</string>
    <string name="app_jyzy">教育资源</string>
    <string name="app_flfg">法律法规</string>
    <string name="sapi_agree_tip">点击注册表示已阅读并同意用户服务协议</string>
    <string name="sapi_error_text">相关错误提示文案</string>
    <string name="sapi_back">返回</string>
    <string name="sapi_regist">注册</string>
    <string name="sapi_email_registing">邮箱注册</string>
    <string name="sapi_regist_btn_text">注册</string>
    <string name="sapi_login">登录</string>
    <string name="sapi_click_login">点击登录...</string>
    <string name="sapi_action">提交</string>
    <string name="sapi_phone_regist">手机号注册</string>
    <string name="sapi_username_tip">用户名</string>
    <string name="sapi_account_tip">帐　号</string>
    <string name="sapi_email_tip">邮　箱</string>
    <string name="sapi_phone_tip">手机号</string>
    <string name="sapi_password_tip">密　码</string>
    <string name="sapi_forget_password">忘记密码？</string>
    <string name="sapi_remember_password">记住密码</string>
    <string name="sapi_dynamic_login">动态登录</string>
    <string name="sapi_sms_regist">短信注册</string>
    <string name="sapi_auto_login">自动登录</string>
    <string name="sapi_verifycode_tip">验证码</string>
    <string name="sapi_phone_hint">请输入手机号</string>
    <string name="sapi_username_email">请输入邮箱地址/手机号</string>
    <string name="sapi_account_hint">邮箱地址/手机号/用户名</string>
    <string name="sapi_email">邮箱地址</string>
    <string name="sapi_password_limit">6-14位，字母区分大小写</string>
    <string name="sapi_verifycode_hint">请输入验证码</string>
    <string name="sapi_change">获取验证码</string>
    <string name="sapi_picture">图标</string>
    <string name="sapi_forget_password_title">找回密码</string>
    <string name="sapi_login_success">登录成功</string>
    <string name="sapi_password_format_error">密码格式错误，请重新输入</string>
    <string name="user_login_password_hint">请输入原密码</string>
    <string name="user_login_newpassword_hint">请输入新密码</string>
    <string name="user_login_renewpassword_hint">请再次输入新密码</string>
    <string name="sapi_username_hint">个性的昵称显个性</string>
    <string name="sapi_account_new_hint">修改便于记忆的个人账号信息</string>
    <string name="sapi_signature_hint">个性的签名显个性</string>
    <string name="sapi_web_hint">例如：个人网站、博客等</string>
    <string name="sapi_username_limit">仅支持英文、数字和下划线</string>
    <string name="sapi_username_format_error">用户名格式错误，请重新输入</string>
    <string name="sapi_verifycode_input_error">验证码输入错误</string>
    <string name="sapi_email_format_error">邮箱格式错误</string>
    <string name="sapi_phone_format_error">手机号格式错误</string>
    <string name="sapi_account_new_tip">注意！！用户账号信息只允许需要改一次！</string>
    <string name="sapi_smscode_sent_to">短信激活码已发送至：</string>
    <string name="sapi_smscode">激活码</string>
    <string name="sapi_account_activate">用户未激活？</string>
    <string name="sapi_smscode_tip">请输入6位激活码</string>
    <string name="sapi_done">完成</string>
    <string name="sapi_edit">编辑</string>
    <string name="sapi_smscode_resent">点击重发激活码</string>
    <string name="sapi_not_get_smscode">没有收到激活码？</string>
    <string name="sapi_not_get_gateway">没有获取到网关信息？</string>
    <string name="sapi_sms_resent_gateway">点击重新获取</string>
    <string name="sapi_login_error_msg">错误(E0028)：数据异常！！！</string>
    <string name="sapi_login_error">错误(E0029)：无法连接到认证服务！</string>
    <string name="network_location_hint_text">IP Addr.,or IP Addr./SharedFolder</string>
    <string name="network_location_display">Display as</string>
    <string name="network_location_display_hint_text">Click to edit, can be empty</string>
    <string name="network_domain">Domain:</string>
    <string name="network_domain_hint_text">Domain name, can be empty</string>
    <string name="location_server">Server</string>
    <string name="network_location_example_text">192.168.1.100/My Documents</string>
    <string name="input_password">Password</string>
    <string name="input_username">Username</string>
    <string name="input_anonymous">Anonymous</string>
    <string name="network_location_example">Example:</string>
    <string name="network_location_save">Remember password</string>
</resources>