<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_login_password_hint"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="14"
        android:maxLines="1" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newPwdText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_login_newpassword_hint"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="14"
        android:maxLines="1" >
    </EditText>

    <EditText
        android:id="@+id/newPwdText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_login_renewpassword_hint"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="14"
        android:maxLines="1" >
    </EditText>

    <LinearLayout
        android:id="@+id/account_tip"
        android:layout_width="fill_parent"
        android:layout_height="25.0dip"
        android:gravity="left|center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sapi_error" />

        <TextView
            android:id="@+id/account_error_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sapi_error_text"
            android:textColor="@color/red"
            android:textSize="14.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_progress"
        android:layout_width="fill_parent"
        android:layout_height="25.0dip"
        android:gravity="left|center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:background="@drawable/loading_dialog_center" />

        <TextView
            android:id="@+id/done_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/sapi_action"
            android:textColor="@color/shadowcolor"
            android:textSize="16.0sp" />
    </LinearLayout>

</LinearLayout>