<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.0dip"
        android:paddingBottom="8.0dip"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:gravity="right"
                android:text="@string/input_username"
                android:textColor="@color/bright_foreground_light" />

            <EditText
                android:id="@+id/username"
                style="@style/editInputText"
                android:layout_marginLeft="4.0dip"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/bright_foreground_light" />
        </TableRow>

        <TableRow android:layout_marginTop="8.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:gravity="right"
                android:text="@string/input_password"
                android:textColor="@color/bright_foreground_light" />

            <EditText
                android:id="@+id/password"
                style="@style/editInputText"
                android:layout_marginLeft="4.0dip"
                android:inputType="textPassword"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/bright_foreground_light" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginTop="8.0dip" >

            <View />

            <CheckBox
                style="@style/check_box_style"
                android:layout_width="wrap_content"
                android:layout_height="24.0dip"
                android:text="@string/input_anonymous"
                android:textColor="@color/bright_foreground_light"
                android:textSize="14.0dip" />
        </TableRow>

        <TableRow
            android:layout_marginTop="4.0dip" >

            <View />

            <CheckBox
                style="@style/check_box_style"
                android:layout_width="wrap_content"
                android:layout_height="24.0dip"
                android:text="@string/network_location_save"
                android:textColor="@color/bright_foreground_light"
                android:textSize="14.0dip" />
        </TableRow>
    </TableLayout>

</ScrollView>