<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/line_layut_white"
              android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/app_setup"
        style="@style/tool_relativelayout"
        android:layout_width="match_parent"
        android:background="@drawable/set_page_bg">

        <ImageView
            android:id="@+id/app_setup_imageview"
            style="@style/tool_imageview_basic"
            android:layout_marginLeft="10dp"
            android:src="@drawable/settings_full_screen_ico" />

        <TextView
            style="@style/setting_textview"
            android:layout_toRightOf="@id/app_setup_imageview"
            android:text="@string/app_setup" />

        <ImageView
            style="@style/tool_imageview_basic"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/xsj" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/app_manager"
        style="@style/tool_relativelayout"
        android:layout_width="match_parent"
        android:background="@drawable/set_page_bg" >

        <ImageView
            android:id="@+id/app_manager_imageview"
            style="@style/tool_imageview_basic"
            android:layout_marginLeft="10dp"
            android:src="@drawable/title_bar_more_setting" />

        <TextView
            style="@style/setting_textview"
            android:layout_toRightOf="@id/app_manager_imageview"
            android:text="@string/app_manager" />

        <ImageView
            style="@style/tool_imageview_basic"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/xsj" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/module_push"
        style="@style/tool_relativelayout"
        android:layout_width="match_parent"
        android:background="@drawable/set_page_bg" >

        <ImageView
            android:id="@+id/module_push_imageview"
            style="@style/tool_imageview_basic"
            android:layout_marginLeft="10dp"
            android:src="@drawable/settings_news_push_ico" />

        <TextView
            style="@style/setting_textview"
            android:layout_toRightOf="@id/module_push_imageview"
            android:text="@string/module_push" />

        <ImageView
            style="@style/tool_imageview_basic"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/xsj" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/module_offlinedownload"
        style="@style/tool_relativelayout"
        android:layout_width="match_parent"
        android:background="@drawable/set_page_bg" >

        <ImageView
            android:id="@+id/module_offlinedownload_imageview"
            style="@style/tool_imageview_basic"
            android:layout_marginLeft="10dp"
            android:src="@drawable/_down" />

        <TextView
            style="@style/setting_textview"
            android:layout_toRightOf="@id/module_offlinedownload_imageview"
            android:text="@string/module_offlinedownload" />

        <ImageView
            style="@style/tool_imageview_basic"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/xsj" />
    </RelativeLayout>

</LinearLayout>